[Test,Master,Backplane] Fillin PenPal test programs and fix Core until the test works
Change StitchDataMessage handling so it is subscribed to by Master only, and Master publishes a ClusterMessage
Mechanism to have the backplane inject network node ID into outgoing messages which require it (NodeStatus, mostly)
Fix Force-Save in InMemoryDataStorage to use existing ID to save if provided
DataMessageAddresser filters out recipients from the current node and sender stitch
MasterModule publishes NodeStatus to new nodes which enter the cluster, in addition to normal scheduled broadcasts
Fix all cases to treat NodeId as a string and not a Guid
TODO notes and misc cleanup

--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Configuration\IModuleConfiguration.cs" />
     <Compile Include="Messages\Backplane\ClusterMessage.cs" />
     <Compile Include="Messages\Backplane\ClusterMessageBuilder.cs" />
+    <Compile Include="Messages\Backplane\IRequiresNetworkNodeId.cs" />
     <Compile Include="Messages\Backplane\MessageHeader.cs" />
     <Compile Include="Messages\Backplane\MessagePayloadType.cs" />
     <Compile Include="Messages\Backplane\TargetType.cs" />
