--- a/Src/CrossStitch.Core.Tests/CrossStitch.Core.Tests.csproj
+++ b/Src/CrossStitch.Core.Tests/CrossStitch.Core.Tests.csproj
@@ -73,7 +73,11 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Messages\ClusterMessageBuilderTests.cs" />
+    <Compile Include="Messages\ClusterMessageTests.cs" />
+    <Compile Include="Models\CommandJobTests.cs" />
     <Compile Include="Models\StitchGroupNameTests.cs" />
+    <Compile Include="Modules\Core\CoreModuleTests.cs" />
     <Compile Include="Modules\Data\DataServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
