[Stitches] Implement a built-in stitch type, Where the stitch can be part of the Core process
Update StitchStart example program to start an instance of this type of stitch (does very little, so far)

--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -83,6 +83,8 @@
     <Compile Include="Modules\Master\MasterDataRepository.cs" />
     <Compile Include="Modules\Master\Models\StitchSummary.cs" />
     <Compile Include="Modules\Master\Models\StitchLocaleType.cs" />
+    <Compile Include="Modules\Stitches\Adaptors\BuiltInClassV1\BuildInClassV1Parameters.cs" />
+    <Compile Include="Modules\Stitches\Adaptors\BuiltInClassV1\BuiltInClassStitchAdaptor.cs" />
     <Compile Include="Modules\Stitches\IStitchEventNotifier.cs" />
     <Compile Include="Modules\Master\IStitchRequestHandler.cs" />
     <Compile Include="Modules\Stitches\Adaptors\ProcessV1\ProcessV1Parameters.cs" />
