[Stitches] README for CrossStitch.Stitch and Cleanups for Stitch-side API
Handle _heartbeat and _exit messages in the GetNextMessage method, which provides much better results
If the Stitch is processing messages synchronously, we know that the exit or sync will only happen at a good boundary
In the case of Heartbeat/sync, we know that the application is responsive, and not just the reader thread.
Some additional cleanups in support of better documentation
README for how to create ProcessV1 stitches using the Stitch library.

--- a/Src/CrossStitch.Stitch/CrossStitch.Stitch.csproj
+++ b/Src/CrossStitch.Stitch/CrossStitch.Stitch.csproj
@@ -58,7 +58,6 @@
     <Compile Include="ProcessV1\Core\LogsReceivedEventArgs.cs" />
     <Compile Include="ProcessV1\Core\RequestResponseReceivedEventArgs.cs" />
     <Compile Include="ProcessV1\Core\StitchProcessEventArgs.cs" />
-    <Compile Include="ProcessV1\Stitch\HeartbeatReceivedEventArgs.cs" />
     <Compile Include="ProcessV1\Stitch\StitchMessageManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProcessV1\FromStitchMessage.cs" />
@@ -70,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
