--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Messages\Master\CommandResponse.cs" />
     <Compile Include="Messages\Master\CommandResultType.cs" />
     <Compile Include="Messages\Master\CommandType.cs" />
+    <Compile Include="Messages\Master\StitchSummaryRequest.cs" />
     <Compile Include="Modules\Master\Handlers\StitchGroupCommandHandler.cs" />
     <Compile Include="Modules\Master\IClusterMessageSender.cs" />
     <Compile Include="Messages\Stitches\CreateInstanceRequest.cs" />
@@ -156,7 +157,6 @@
     <Compile Include="Monitoring\Events\ObservationEvent.cs" />
     <Compile Include="Messages\CoreEvent.cs" />
     <Compile Include="Models\NodeStatus.cs" />
-    <Compile Include="Messages\Master\NodeStatusRequest.cs" />
     <Compile Include="NodeConfiguration.cs" />
     <Compile Include="CrossStitchCore.cs" />
     <Compile Include="Modules\Master\MasterModule.cs" />
