--- a/Src/CrossStitch.Http.Nancy/CrossStitch.Http.NancyFx.csproj
+++ b/Src/CrossStitch.Http.Nancy/CrossStitch.Http.NancyFx.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Handlers\CommandJobsNancyModule.cs" />
     <Compile Include="Handlers\StitchesNancyModule.cs" />
     <Compile Include="Handlers\ModulesNancyModule.cs" />
-    <Compile Include="Handlers\NodeRequestHandler.cs" />
+    <Compile Include="Handlers\ClusterNancyModule.cs" />
     <Compile Include="Handlers\StitchGroupNancyModule.cs" />
     <Compile Include="HttpConfiguration.cs" />
     <Compile Include="HttpModuleBootstrapper.cs" />
