[Tests] Give HttpTest.Server NODEID and NODENAME, for easy api calls.

--- a/Tests/HttpTest/HttpTest.Server/HttpTest.Server.csproj
+++ b/Tests/HttpTest/HttpTest.Server/HttpTest.Server.csproj
@@ -88,6 +88,14 @@
       <Name>CrossStitch.Stitch</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="NODENAME">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="NODEID">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
