[Stitches,Master] Introduce the concept of a 'FullId' for Stitches
Stitch IDs are guaranteed to be unique per node but not per cluster. To allow ID-based addressing to a stitch, we need to have full IDs.
FullIds are {NodeID}:{StitchID}
Add a StitchFullId class to handle the various formats and parsings.
Update Master to properly address messages with IDs in {StitchId} and {NodeId}:{StitchId} formats
Master handles StitchDataMessage and CommandRequest messages with IDs in these formats.

--- a/Src/CrossStitch.Core.Tests/CrossStitch.Core.Tests.csproj
+++ b/Src/CrossStitch.Core.Tests/CrossStitch.Core.Tests.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Messages\ClusterMessageBuilderTests.cs" />
     <Compile Include="Messages\ClusterMessageTests.cs" />
     <Compile Include="Models\CommandJobTests.cs" />
+    <Compile Include="Models\StitchFullIdTests.cs" />
     <Compile Include="Models\StitchGroupNameTests.cs" />
     <Compile Include="Modules\Core\CoreModuleTests.cs" />
     <Compile Include="Modules\Data\DataServiceTests.cs" />
