--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -69,6 +69,10 @@
     <Compile Include="Messages\Master\CommandResultType.cs" />
     <Compile Include="Messages\Master\CommandType.cs" />
     <Compile Include="Messages\Master\StitchSummaryRequest.cs" />
+    <Compile Include="Models\AdaptorType.cs" />
+    <Compile Include="Models\InstanceAdaptorDetails.cs" />
+    <Compile Include="Models\InstanceStateType.cs" />
+    <Compile Include="Models\StitchFullId.cs" />
     <Compile Include="Modules\Master\Handlers\StitchGroupCommandHandler.cs" />
     <Compile Include="Modules\Master\IClusterMessageSender.cs" />
     <Compile Include="Messages\Stitches\CreateInstanceRequest.cs" />
@@ -82,7 +86,7 @@
     <Compile Include="Modules\Master\Handlers\StopStitchCommandHandler.cs" />
     <Compile Include="Modules\Master\MasterDataRepository.cs" />
     <Compile Include="Modules\Master\Models\StitchSummary.cs" />
-    <Compile Include="Modules\Master\Models\StitchLocaleType.cs" />
+    <Compile Include="Models\StitchLocaleType.cs" />
     <Compile Include="Modules\Stitches\Adaptors\BuiltInClassV1\BuildInClassV1Parameters.cs" />
     <Compile Include="Modules\Stitches\Adaptors\BuiltInClassV1\BuiltInClassStitchAdaptor.cs" />
     <Compile Include="Modules\Stitches\IStitchEventNotifier.cs" />
