--- a/Src/CrossStitch.Stitch/CrossStitch.Stitch.csproj
+++ b/Src/CrossStitch.Stitch/CrossStitch.Stitch.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="ProcessV1\README.md" />
     <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
