[Master] Start factoring job-related logic to a new class

--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Modules\Master\IClusterMessageSender.cs" />
     <Compile Include="Messages\Stitches\CreateInstanceRequest.cs" />
     <Compile Include="Models\CommandJob.cs" />
+    <Compile Include="Modules\Master\JobManager.cs" />
     <Compile Include="Modules\Master\MasterStitchCache.cs" />
     <Compile Include="Modules\Master\Handlers\ICommandHandler.cs" />
     <Compile Include="Modules\Master\Handlers\PingCommandHandler.cs" />
