[Master] Create a designated _master zone and only publish node/stitch status to that zone
All nodes are in the _master zone now. A config parameter will be needed to exclude nodes from this zone.
Several important questions about message routing need to be answered before we can allow nodes to be excluded from _master

--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Utility\NullModuleLog.cs" />
     <Compile Include="Utility\Serialization\IByteSerializer.cs" />
     <Compile Include="Utility\Serialization\JsonByteSerializer.cs" />
+    <Compile Include="Zones.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="CrossStitch.Core.nuspec">
