--- a/Tests/StitchIntegration/StitchIntegration.ServerB/App.config
+++ b/Tests/StitchIntegration/StitchIntegration.ServerB/App.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="common">
@@ -15,10 +15,18 @@
         <arg key="showLevel" value="true" />
         <arg key="showLogName" value="false" />
         <arg key="showDateTime" value="true" />
-        <arg key="useColor" value="true"/>
+        <arg key="useColor" value="true" />
         <!-- This doesn't seem to work -->
         <arg key="dateTimeFormat" value="HH:mm:ss:fff" />
       </factoryAdapter>
     </logging>
   </common>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="NetMQ" publicKeyToken="a6decef4ddc58b3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.1" newVersion="4.0.0.1" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
